Fix overflow in concept form footer alert

--- a/src/scss/views/_concept-form.scss
+++ b/src/scss/views/_concept-form.scss
@@ -18,6 +18,10 @@
             margin-bottom: 0;
             padding-top: 4px;
             padding-bottom: 4px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            width: 100%;
+            overflow: hidden;
         }
 
         .actions {
